Fixed copy on mobile

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
 
 h1 {
   font-size: 4em;
-line-height: 0;
 }
 
 h1,
@@ -76,12 +75,14 @@ section {
   border: 1px solid rgb(218, 218, 218);
   text-decoration: none;
   box-shadow: 0 0 5px rgb(221, 221, 221);
+  display: inline-block;
 }
 
 .btn-link {
   padding: 10px 20px;
   color:white;
   text-decoration: none;
+  display: inline-block;
 }
 
 .space1 {
